--- a/Book-Tracker/src/main/resources/application.properties
+++ b/Book-Tracker/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=pass
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.web.resources.static-locations=classpath:/static/
+
